# axum-sse-from-channel

./: Cargo.toml  README.md
src/: data_producer.rs  http_server.rs  main.rs  message_producer.rs  shared_types.rs  shutdown_signal.rs  types.rs
