[package]
name = "axum-sse-from-channel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.15", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
axum = "0.7"
log = "0.4.20"
env_logger = "0.10.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
